--- a/ymate-module-embed/pom.xml
+++ b/ymate-module-embed/pom.xml
@@ -77,6 +77,10 @@
             <artifactId>junit</artifactId>
         </dependency>
         <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+        <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-webmvc</artifactId>
         </dependency>
