--- a/ymate-module-embed-tomcat/pom.xml
+++ b/ymate-module-embed-tomcat/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>ymate-embed-parent</artifactId>
         <groupId>net.ymate.module</groupId>
-        <version>1.0.3-dev</version>
+        <version>1.0.3</version>
     </parent>
 
     <artifactId>ymate-module-embed-tomcat</artifactId>
